# iot-patient-monitoring-platform

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  course-project-context.md  paper-to-product.md
simulators/: demo_stream.py
src/iot_monitoring/: __init__.py  app_factory.py  config.py  database.py  dependencies.py  main.py  models.py  schemas.py
src/iot_monitoring/routers/: __init__.py  alerts.py  dashboard.py  devices.py  telemetry.py
src/iot_monitoring/services/: bootstrap.py  dashboard.py  notifications.py  realtime.py  rules.py  telemetry.py
src/iot_monitoring/static/: dashboard.css  dashboard.js
src/iot_monitoring/templates/: dashboard.html
tests/: test_endpoints.py
